# persona-exporter

./: Cargo.toml
.github/workflows/: main.yml
src/: lib.rs  main.rs  metrics.rs
src/config/: config.example.toml  config.rs
