[package]
name = "persona-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
paas-core = { workspace = true }
persona-exporter-types = { version = "0.1.0" }

# Метрики
sysinfo = { version = "0.39.3" , features = ["system"]} # Linux
postcard = "1.1.3" # Embended

tokio = { version = "1.52.2", features = ["full"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"]}

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
opt-level = "s"
debug = false
codegen-units = 1
lto = true
strip = true
panic = "abort"