[package]
name = "persona-exporter"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"

[target.'cfg(target_os = "none")'.dependencies]
postcard = "1.1.3"

[dependencies]
persona-exporter-types = { version = "0.1.4", features = ["serde"] }
sysinfo = { version = "0.39.3" , features = ["system"]}

tokio = { version = "1.52.2", features = ["full"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"]}

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
config = "0.15.24"
serde = "1.0.228"

[profile.release]
opt-level = "s"
debug = false
codegen-units = 1
lto = true
strip = true
panic = "abort"